# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a Kosha REST serice for exposing many freshservice features as REST APIs with better consistency, observability etc",
+        "description": "This is a Kosha REST serice for exposing many airtable features as REST APIs with better consistency, observability etc",
         "title": "Airtable Connector API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
@@ -15,7 +15,7 @@
     "paths": {
         "/api/v0/meta/bases": {
             "get": {
-                "description": "Get Records",
+                "description": "Get Bases",
                 "consumes": [
                     "application/json"
                 ],
@@ -23,7 +23,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "agents"
+                    "Bases"
                 ],
                 "summary": "Get airtable",
                 "responses": {
@@ -93,7 +93,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "agents"
+                    "Records"
                 ],
                 "summary": "Get airtable",
                 "parameters": [
@@ -139,7 +139,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "agents"
+                    "Comments"
                 ],
                 "summary": "Get airtable",
                 "parameters": [
@@ -185,7 +185,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "agents"
+                    "Records"
                 ],
                 "summary": "Get airtable",
                 "parameters": [
@@ -210,6 +210,148 @@
                         "schema": {
                             "$ref": "#/definitions/models.RecordsStruct"
                         }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a record for airtable\nPlease refer to https://airtable.com/developers/web/api/create-records for more parameter options.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "createRecords"
+                ],
+                "summary": "Create a record for a project",
+                "parameters": [
+                    {
+                        "description": "Enter project risk properties",
+                        "name": "project",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.Record"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Base Id",
+                        "name": "baseId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Table Id",
+                        "name": "tableId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/v0/{baseId}/{tableId}/{recordId}": {
+            "put": {
+                "description": "Update a record for the airtable\nPlease refer to https://airtable.com/developers/web/api/create-records for more parameter options.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "updateRecords"
+                ],
+                "summary": "update a record for a project",
+                "parameters": [
+                    {
+                        "description": "Enter project risk properties",
+                        "name": "project",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.Record"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Base Id",
+                        "name": "baseId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Table Id",
+                        "name": "tableId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Record Id",
+                        "name": "RecordId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
+            "delete": {
+                "description": "delete a record for the airtable\nPlease refer to https://airtable.com/developers/web/api/create-records for more parameter options.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "deleteRecords"
+                ],
+                "summary": "delete a record for a project",
+                "parameters": [
+                    {
+                        "description": "Enter project risk properties",
+                        "name": "project",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.Record"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Base Id",
+                        "name": "baseId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Table Id",
+                        "name": "tableId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Record Id",
+                        "name": "RecordId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     }
                 }
             }
