# pkg/app/bases_router.go
@@ -8,20 +8,18 @@ import (
 
 // getBases godoc
 // @Summary Get airtable
-// @Description Get Records
-// @Tags agents
+// @Description Get Bases
+// @Tags Bases
 // @Accept  json
 // @Produce  json
 // @Success 200 {object} models.BasesStruct
 // @Router /api/v0/meta/bases [get]
 func (a *App) getBases(w http.ResponseWriter, r *http.Request) {
-
 	//Allow CORS here By * or specific origin
 	w.Header().Set("Access-Control-Allow-Origin", "*")
 	w.Header().Set("Access-Control-Allow-Headers", "*")
 	w.Header().Set("Access-Control-Allow-Methods", "*")
-
-	agents := httpclient.GetBases(a.Cfg.GetAirtableURL()+"/meta/bases", a.Cfg.GetPersonalAccessToken())
-
-	respondWithJSON(w, http.StatusOK, agents)
+	generate_url := a.Cfg.GetAirtableURL() + "/meta/bases"
+	bases := httpclient.GetBases(generate_url, a.Cfg.GetPersonalAccessToken())
+	respondWithJSON(w, http.StatusOK, bases)
 }
